Calendar Module 7.x
==================

===================
Version 7.x-3.x-dev
===================

- Style tweaks, make the day window bigger by not ending it at the bottom of the browser screen.

======================
Version 7.x-3.2
======================

Please read the notes for the 3.1 release as well.

- Issue #1537598, Fix misc errors in day display caused when some items were not getting rendered due to a badly placed 'continue' in the loop.

======================
Version 7.x-3.1
======================

DEPRECATED ELEMENTS:

- The default calendar has been removed. If you have calendars created with the old default calendar you should re-create them using the new template.
- The Calendar iCal module has been hidden so you can't enable it and will be deleted completely in the next release. Use the new Date iCal module instead.
- The Calendar Items row plugin has been removed from the UI and will be deleted completely in the next release.


NEW FEATURES:
- The legend block has been reworked to eliminate storing stripes in $GLOBALS, making it cacheable. A new configuration option sets the view that is used for the stipe options.
- Add the headers attribute to multiday calendar tables for html5 compliance and accessibility.
- Issue #1535346, Rework the calendar tab handling to get rid of custom tabs and add in a setting to track the current date.
- Issue #1535346 continuation, rework the current date tracking to use the new date_default_argument_alter hook.

There have been numerous problems with the way the tabs are working. They revert to the current day when you switch from one display to another. They are not translating correctly. Sometimes the paths are incorrect (i.e. if there are other arguments in the display). Some people don't want the tabs. Other people want additional tabs.
