@@ -864,8 +864,10 @@ table.calendar-legend tr.even .stripe {
   width:auto;
 }
 
-.date-nav {
-  padding-bottom: 0;
+/* The date page adds padding below itself to keep it clear of content. We don't want this extra space in a calendar. */
+div.calendar-calendar {
+  margin-top: -3em;
+  position: relative;
 }
 
 ul.calendar-links,
